# practice

./: CMakeLists.txt  README.md
conf/: dict.conf
src/: CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h
test/: CMakeLists.txt  ConfigLoader_test.cpp
