set(LIB_SRC ConfigLoader.cpp)
add_definitions("-DLIBPRACTICE_BUILD")
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
add_library(libpractice SHARED ${LIB_SRC})
add_library(practice_static STATIC ${LIB_SRC})
install(TARGETS libpractice LIBRARY DESTINATION lib)
install(TARGETS practice_static ARCHIVE DESTINATION lib)
install(FILES ConfigLoader.h DESTINATION include)
set_target_properties(libpractice PROPERTIES OUTPUT_NAME "practice")
set_target_properties(practice_static PROPERTIES OUTPUT_NAME "practice")
